# discret-event-simulation

./: .gitignore  README.md  RED1.def  RED1.xml  Red2.def  Red2.xml  discret_simulator.spec  main.py  pyproject.toml  red.def  red.xml
.github/workflows/: build-installers.yml
core/: distributions.py  engine.py  models.py  stats.py
io_formats/: _shared.py  def_parser.py  def_writer.py  report_writer.py  xml_parser.py  xml_writer.py
packaging/linux/: discret-simulator.desktop
packaging/windows/: installer.iss
tests/: test_def_writer.py  test_distributions.py  test_engine.py  test_models.py  test_parsers.py  test_plots.py  test_report_writer.py  test_stats.py  test_xml_parser.py  test_xml_writer.py
ui/: editor_bridge.py  main_window.py
ui/web/: editor.html
viz/: plots.py
