[project]
name = "discret-simulator"
version = "0.1.0"
description = "Simulador de eventos discretos con editor visual de redes de procesos (trabajo de grado, Ingeniería de Sistemas, Universidad de Pamplona)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]
